# zlog

./: .gitignore  README.md
doc/: build.txt
zloggen/: CMakeLists.txt  main.cpp  utils.cpp
zlogread/: CMakeLists.txt  directorymonitor.cpp  filemonitor.cpp  main.cpp  monitor.cpp  processor.cpp  processoraction.cpp  stacktrace.cpp  utils.cpp  zlog.h
